bug fix: fixed issue where card image has no minimum height when img is not yet loaded on mobile view

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -385,7 +385,7 @@ footer {
 
 .card-image {
   width: 100%;
-  height: 100%;
+  height: 200px;
   display: flex;
   align-items: center;
   justify-content: center;
